--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -37,11 +37,13 @@
 
 .nav-item {
   padding: 10px 16px;
+  display: flex;
+  align-items: center;
 }
 
 .ic-learning {
   margin-left: 8px;
-  font-size: 1.2rem;
+  font-size: 1rem;
   color: #9f0e0f;
 }
 
